crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__package_cases.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::Bar"
    number "1.23"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "My::Module"
    number "0.01"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Test"
    number "2.5"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::Bar"
    BLOCK
      `{` "{"
      VAR_DECL_STMT
        LIST_EXPR
          ASSIGN_EXPR
            VAR_DECL
              `my` "my"
              DECL_TARGET
                SCALAR_VAR
                  `$` "$"
                  identifier "x"
            `=` "="
            LITERAL
              number "1"
        `;` ";"
      `}` "}"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::Bar::Baz"
    BLOCK
      `{` "{"
      EXPR_STMT
        LIST_EXPR
          LIST_CALL_EXPR
            SUB_NAME
              identifier "say"
            LIST_EXPR
              LITERAL
                string literal "\"hi\""
        `;` ";"
      `}` "}"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::123"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Bar::456::Test"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Module::2024::Version"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "A::1::B::2::C::3"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::123"
    BLOCK
      `{` "{"
      VAR_DECL_STMT
        LIST_EXPR
          ASSIGN_EXPR
            VAR_DECL
              `my` "my"
              DECL_TARGET
                SCALAR_VAR
                  `$` "$"
                  identifier "x"
            `=` "="
            LITERAL
              number "1"
        `;` ";"
      `}` "}"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Bar::456"
    number "1.0"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::123ABC"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Bar::456DEF::Test"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Module::123abc456"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Test::999XYZ789"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::123ABC"
    BLOCK
      `{` "{"
      VAR_DECL_STMT
        LIST_EXPR
          ASSIGN_EXPR
            VAR_DECL
              `my` "my"
              DECL_TARGET
                SCALAR_VAR
                  `$` "$"
                  identifier "x"
            `=` "="
            LITERAL
              number "1"
        `;` ";"
      `}` "}"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Bar::456DEF"
    version string "v1.0.0"
    `;` ";"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "Foo::123ABC::B::456DEF"
    `;` ";"
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "tr"
    BLOCK
      `{` "{"
      `}` "}"
  PACKAGE_STMT
    `package` "package"
    SUB_NAME
      identifier "tr"
    `;` ";"
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "given"
    BLOCK
      `{` "{"
      `}` "}"
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "when"
    BLOCK
      `{` "{"
      `}` "}"
  SUB_DEF
    `sub` "sub"
    SUB_NAME
      identifier "default"
    BLOCK
      `{` "{"
      `}` "}"
