crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__print_filehandle_heredoc.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "print"
        FILEHANDLE
          SCALAR_VAR
            `$` "$"
            identifier "FH"
        LIST_EXPR
          HEREDOC_EXPR
            heredoc marker "<<HOGE"
  heredoc body ")))a\n"
  heredoc terminator "HOGE"
