crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__qw_list_array_subscription.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "first"
        `=` "="
        ARRAY_SUBSCRIPT_EXPR
          QW_EXPR
            `qw` "qw"
            delimiter "("
            word list contents "foo bar"
            delimiter ")"
          `[` "["
          SUBSCRIPT
            LITERAL
              number "0"
          `]` "]"
    `;` ";"
